--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "deploy": "npm run build && aws s3 sync --cache-control 'no-cache' dist/ s3://ryan.study.snakegame/ "
   },
   "devDependencies": {
-    "babel-loader": "^8.0.6",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@material/button": "^3.1.0",
+    "@material/ripple": "^3.1.0",
+    "autoprefixer": "^9.6.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.16.0",
-    "webpack": "^4.36.1",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^4.1.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^3.12.0",
     "webpack-cli": "^3.3.6",
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5"
+    "webpack-dev-server": "^2.11.5"
   },
   "keywords": [],
   "author": "",
